--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Rifat Nabi's Git Achievements <img src='http://www.gravatar.com/avatar/392ad9591d2b38dbdefc04af90ced991'/></h2>
-Unlocked       12/      53 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 47 points<br>
+Unlocked       12/      53 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 50 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -19,6 +19,7 @@ Unlocked       12/      53 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Apprentice Banker (Level 2)</div>  <div class="info">Join two or more development histories together with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-merge.html">git-merge</a>.</div></li>
 <li><div class="title">Apprentice Blacksmith (Level 1)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Apprentice Cleaning lady (Level 1)</div>  <div class="info">Remove untracked files from the working tree with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-clean.html">git-clean</a></div></li>
+<li><div class="title">Apprentice Cleaning lady (Level 2)</div>  <div class="info">Remove untracked files from the working tree with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-clean.html">git-clean</a></div></li>
 <li><div class="title">Apprentice Collector (Level 1)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
 <li><div class="title">Apprentice Historian (Level 1)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Apprentice Historian (Level 2)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
@@ -34,27 +35,27 @@ Unlocked       12/      53 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
- 881 status
+ 889 status
  843 branch
-  20 checkout
+  22 checkout
+  21 symbolic-ref
+  21 rev-parse
   20 achievements
   16 help
-  14 symbolic-ref
-  14 rev-parse
   12 config
    8 push
    7 reset
    5 log
    5 ignore
+   5 diff
    4 show
    4 merge
    4 init
-   4 diff
    4 commit
+   4 clean
    4 add
    4 !git
    3 rm
-   3 clean
    3 Wed
    2 remote
    2 fetch
