--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Rifat Nabi's Git Achievements <img src='http://www.gravatar.com/avatar/392ad9591d2b38dbdefc04af90ced991'/></h2>
-Unlocked       13/      53 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 51 points<br>
+Unlocked       13/      53 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 55 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -23,6 +23,7 @@ Unlocked       13/      53 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Apprentice Collector (Level 1)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
 <li><div class="title">Apprentice Historian (Level 1)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Apprentice Historian (Level 2)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
+<li><div class="title">Apprentice Historian (Level 3)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Apprentice Presenter (Level 1)</div>  <div class="info">Shows one or more objects (blobs, trees, tags and commits) with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show.html">git-show</a></div></li>
 <li><div class="title">Apprentice Presenter (Level 2)</div>  <div class="info">Shows one or more objects (blobs, trees, tags and commits) with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show.html">git-show</a></div></li>
 <li><div class="title">Apprentice Socialite (Level 1)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
@@ -36,18 +37,19 @@ Unlocked       13/      53 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-1022 status
- 853 branch
- 137 symbolic-ref
- 137 rev-parse
-  22 checkout
+1126 status
+ 901 branch
+ 187 symbolic-ref
+ 154 rev-parse
+  23 checkout
   20 achievements
   17 help
-  12 config
+  16 ls-files
+  14 config
   11 diff
-   8 reset
+   9 reset
    8 push
-   6 log
+   8 log
    6 commit
    6 add
    5 init
@@ -59,10 +61,12 @@ Git commands sorted by usage:
    3 rm
    3 Wed
    2 remote
+   2 rebase
    2 fetch
+   2 clone
    2 branchs
    1 tag
-   1 rebase
+   1 summary
    1 prune
    1 ls-remote
    1 gc
@@ -70,8 +74,9 @@ Git commands sorted by usage:
    1 extras
    1 extra
    1 dropbox
-   1 clone
+   1 count
    1 blame
+   1 alias
    1 --help
 </pre>
 <script type="text/javascript">
